--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
 }
 
 .grey-text {
-    color: #b4b4b4;
+    color: #6e6e6e;
 }
 
 .white-bgr {
@@ -47,7 +47,12 @@
 
 /* DETAILED */
 /* NAVIGATION */
-.logo{
+
+#nav {
+    position: fixed;
+}
+
+.logo {
     padding: 26px 12px;
 }
 
@@ -59,6 +64,10 @@ padding: 64px 0;
     list-style: none;
 }
 
+.content__shirt > li > a{
+    color: #686868;
+}
+
 .content__table li:hover {
     background-color: #ccc;
     color: #000;
@@ -68,19 +77,26 @@ padding: 64px 0;
     text-decoration: none;
     padding: 8px 16px;
     display: block;
-
 }
 
 .content__table > li {
     color: #b4b4b4;
 }
 
+.content__navig > li > a{
+    color: #000000;
+}
+
 .extend > ul {
     padding-left: 12px;
 }
-.extend > ul li:first-child {
+.extend > ul li:first-child a{
     color: #000;
     background-color: #ebebeb;
+}
+
+.extend > ul :not(li:first-child) a{
+    color: #686868;
 }
 
 .extend-icon {
@@ -108,4 +124,19 @@ padding: 64px 0;
 
 .header-icon > i{
     padding-left: 15px;
+}
+
+/* BODY */
+
+.picture > img{
+    width: 100%;
+}
+
+.pro-name {
+    margin-top: 15px;
+}
+
+.pro-price {
+    margin-bottom: 15px;
+    font-weight: bold;
 }
