--- a/assets/css/grid_system.css
+++ b/assets/css/grid_system.css
@@ -113,6 +113,10 @@
     margin-left: 16.66667%;
 }
 
+.c-o-2-4 {
+    margin-left: 20%;
+}
+
 .c-o-3 {
     margin-left: 25%;
 }
@@ -141,6 +145,10 @@
     margin-left: 75%;
 }
 
+.c-o-9-6 {
+    margin-left: 80%;
+}
+
 .c-o-10 {
     margin-left: 83.33333%;
 }
@@ -167,6 +175,7 @@
 
     .m-1,
     .m-2,
+    .m-2-4,
     .m-3,
     .m-4,
     .m-5,
@@ -174,6 +183,7 @@
     .m-7,
     .m-8,
     .m-9,
+    .m-9-6,
     .m-10,
     .m-11,
     .m-12 {
@@ -188,6 +198,11 @@
     .m-2 {
         flex: 0 0 16.66667%;
         max-width: 16.66667%;
+    }
+
+    .m-2-4 {
+        flex: 0 0 20%;
+        max-width: 20%;
     }
 
     .m-3 {
@@ -253,6 +268,10 @@
         margin-left: 16.66667%;
     }
 
+    .m-o-2-4 {
+        margin-left: 20%;
+    }
+
     .m-o-3 {
         margin-left: 25%;
     }
@@ -279,6 +298,10 @@
 
     .m-o-9 {
         margin-left: 75%;
+    }
+
+    .m-o-9-6 {
+        margin-left: 80%;
     }
 
     .m-o-10 {
@@ -502,6 +525,7 @@
     .wide .l-7,
     .wide .l-8,
     .wide .l-9,
+    .wide .l-9-6
     .wide .l-10,
     .wide .l-11,
     .wide .l-12 {
@@ -584,6 +608,10 @@
 
     .wide .l-o-2 {
         margin-left: 16.66667%;
+    }
+
+    .wide .l-o-2-4 {
+        margin-left: 20%;
     }
 
     .wide .l-o-3 {
