--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .col {
     /* background-color: orange; */
     /* height: 100px; */
@@ -169,8 +173,42 @@ padding: 64px 0;
 /* overflow: hidden; */
 }
 
+.banner {
+    position: relative;
+}
+
 .picture > img{
     width: 100%;
+}
+
+.picture__des {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
+.picture__des > h1 {
+    font-size: 64px;
+}
+
+.picture__des > h2 {
+    font-size: 36px;
+    margin-top: 16px;
+    margin-bottom: 30px;
+}
+
+.picture__des > a {
+    text-decoration: none;
+    color: #fff;
+    background-color: #000;
+    padding: 12px 24px;
+}
+
+.picture__des > a:hover {
+    text-decoration: none;
+    color: #000000;
+    background-color: #ccc;
+    padding: 12px 24px;
 }
 
 .pro-name {
@@ -214,6 +252,7 @@ padding: 64px 0;
     padding: 8px 16px;
     color: #ffffff;
     background-color: orangered;
+    cursor: pointer;
 }
 
 .sub__btn:hover {
@@ -270,6 +309,7 @@ padding: 64px 0;
 .contact__btn:hover {
     color: #000000;
     background-color: #c5c5c5;
+    cursor: pointer;
 }
 
 .accept__list > li,
