--- a/assets/css/grid_system.css
+++ b/assets/css/grid_system.css
@@ -158,6 +158,7 @@
 }
 
 /* >= Tablet */
+/* Prefix: m- */
 @media (min-width: 740px) {
     .row {
         margin-left: -8px;
@@ -314,6 +315,7 @@
 }
 
 /* PC medium resolution > */
+/* Prefix: l- */
 @media (min-width: 1113px) {
     .row {
         margin-left: -12px;
@@ -486,6 +488,7 @@
 }
 
 /* > PC low resolution */
+/* Prefix: l- */
 @media (min-width: 1024px) and (max-width: 1239px) {
     .wide {
         width: 984px;
